[package]
name = "openbible"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[package.metadata.android]
package = "com.schwegelbin.openbible"
build_targets = [ "aarch64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 34
max_sdk_version = 34

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault"
label = "OpenBible"
orientation = "portrait"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
max_sdk_version = 34

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
max_sdk_version = 34


[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.8", features = ["backend-android-activity-06"] }
